--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- 3D Background Canvas -->
     <canvas id="bg3d"></canvas>
     
-    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">Barath M</div>
@@ -26,28 +24,40 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1 class="hero-title">Barath M</h1>
-            <p class="hero-subtitle">Computer Science Student | Cloud Technologies | Software Solutions</p>
-            <p class="hero-desc">B.Sc Computer Science with Cognitive Systems<br>Dr. N. G. P. Arts and Science College | Coimbatore, India</p>
-            <div class="hero-contact">
-                <p><i class="fas fa-phone"></i> +91 9789223360</p>
-                <p><i class="fas fa-envelope"></i> mbarath2121@gmail.com</p>
-                <p><i class="fas fa-map-marker-alt"></i> Coimbatore - 641111</p>
+        <div class="hero-wrapper">
+            <div class="profile-card">
+                <img src="https://via.placeholder.com/300?text=Barath+M" alt="Barath M" class="profile-image">
+                <h1 class="hero-title">Barath M</h1>
+                <p class="hero-subtitle">Computer Science Student | Cloud Technologies | Software Solutions</p>
             </div>
-            <a href="#projects" class="btn btn-primary">View My Work</a>
+            <div class="hero-content-glass">
+                <p class="hero-desc">B.Sc Computer Science with Cognitive Systems<br>Dr. N. G. P. Arts and Science College | Coimbatore, India</p>
+                <div class="hero-contact">
+                    <div class="contact-item">
+                        <i class="fas fa-phone"></i>
+                        <span>+91 9789223360</span>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <span>mbarath2121@gmail.com</span>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Coimbatore - 641111</span>
+                    </div>
+                </div>
+                <a href="#projects" class="btn btn-primary">View My Work</a>
+            </div>
         </div>
     </section>
 
-    <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2>About Me</h2>
-            <div class="about-content">
+            <h2 class="section-title">About Me</h2>
+            <div class="glass-card">
                 <p>I am a motivated computer science student with hands-on experience in software installation, cloud technologies, and customer service. Eager to contribute technical knowledge and problem-solving skills in a dynamic IT environment.</p>
-                <p><strong>Career Objective:</strong></p>
+                <p class="mt-2"><strong>Career Objective:</strong></p>
                 <ul class="objective-list">
                     <li>Management Skills</li>
                     <li>Creativity & Innovation</li>
@@ -58,13 +68,11 @@
         </div>
     </section>
 
-    <!-- Education Section -->
     <section id="experience" class="education">
         <div class="container">
-            <h2>Education & Experience</h2>
+            <h2 class="section-title">Education & Experience</h2>
             <div class="education-grid">
-                <!-- Education -->
-                <div class="edu-card">
+                <div class="glass-card">
                     <h3><i class="fas fa-graduation-cap"></i> Education</h3>
                     <div class="edu-item">
                         <h4>B.Sc Computer Science with Cognitive Systems</h4>
@@ -78,16 +86,9 @@
                         <p class="year">2022 - 2023</p>
                         <p class="gpa">Score: 54</p>
                     </div>
-                    <div class="edu-item">
-                        <h4>HSC 11th - Computer Science</h4>
-                        <p>N.G.R.A. H.S.S</p>
-                        <p class="year">2021 - 2022</p>
-                        <p class="gpa">Score: 55</p>
-                    </div>
                 </div>
 
-                <!-- Work Experience -->
-                <div class="exp-card">
+                <div class="glass-card">
                     <h3><i class="fas fa-briefcase"></i> Work Experience</h3>
                     <div class="exp-item">
                         <h4>Billing Expert</h4>
@@ -114,12 +115,11 @@
         </div>
     </section>
 
-    <!-- Internships & Certifications Section -->
     <section id="certifications" class="certifications">
         <div class="container">
-            <h2>Internships & Certifications</h2>
+            <h2 class="section-title">Internships & Certifications</h2>
             <div class="cert-grid">
-                <div class="cert-card accent-red">
+                <div class="glass-card cert-card">
                     <h3>Infosys Springboard</h3>
                     <ul>
                         <li>Information Security - Jul 2025</li>
@@ -129,11 +129,11 @@
                         <li>Operational Research - Sep 2024</li>
                     </ul>
                 </div>
-                <div class="cert-card">
+                <div class="glass-card cert-card">
                     <h3>Other Certifications</h3>
                     <ul>
                         <li>PROMPT Infotech: Threat Analysis using Wireshark - Jul 2024</li>
-                        <li>NOBAL TECHNOLOGY: Cloud Technology (15 Days) - Completed</li>
+                        <li>NOBAL TECHNOLOGY: Cloud Technology (15 Days)</li>
                         <li>Microsoft Office (Word, Excel, PowerPoint)</li>
                         <li>OS Installation (Windows/Linux)</li>
                         <li>System Configuration & Maintenance</li>
@@ -143,149 +143,135 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
-            <h2>Technical Skills</h2>
-            <div class="skills-container">
-                <div class="skill-category">
+            <h2 class="section-title">Technical Skills</h2>
+            <div class="skills-grid">
+                <div class="glass-card skill-card">
                     <h3>Cloud & Virtualization</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Azure</span>
                         <span class="skill-tag">AWS</span>
-                        <span class="skill-tag accent-red">Cloud Architecture</span>
+                        <span class="skill-tag">Cloud Architecture</span>
                         <span class="skill-tag">Virtualization</span>
                     </div>
                 </div>
-                <div class="skill-category">
+                <div class="glass-card skill-card">
                     <h3>Security & Networking</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Cyber Security</span>
-                        <span class="skill-tag accent-red">Information Security</span>
+                        <span class="skill-tag">Information Security</span>
                         <span class="skill-tag">Wireshark</span>
                         <span class="skill-tag">Threat Analysis</span>
                     </div>
                 </div>
-                <div class="skill-category">
+                <div class="glass-card skill-card">
                     <h3>Software & OS</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Windows</span>
                         <span class="skill-tag">Linux</span>
-                        <span class="skill-tag accent-red">Software Installation</span>
+                        <span class="skill-tag">Software Installation</span>
                         <span class="skill-tag">System Configuration</span>
                     </div>
                 </div>
-                <div class="skill-category">
+                <div class="glass-card skill-card">
                     <h3>Development & Tools</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Selenium</span>
                         <span class="skill-tag">UIPath</span>
-                        <span class="skill-tag accent-red">Automation Testing</span>
+                        <span class="skill-tag">Automation Testing</span>
                         <span class="skill-tag">Manual Testing</span>
                     </div>
                 </div>
-                <div class="skill-category">
+                <div class="glass-card skill-card">
                     <h3>Design & Office</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Canva</span>
                         <span class="skill-tag">AI Tools</span>
                         <span class="skill-tag">Microsoft Word</span>
-                        <span class="skill-tag accent-red">Microsoft Excel</span>
+                        <span class="skill-tag">Microsoft Excel</span>
                     </div>
                 </div>
-                <div class="skill-category">
+                <div class="glass-card skill-card">
                     <h3>Languages</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">English</span>
-                        <span class="skill-tag accent-red">Tamil</span>
+                        <span class="skill-tag">Tamil</span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <h2>Featured Projects</h2>
+            <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
-                <div class="project-card">
+                <div class="glass-card project-card">
                     <div class="project-header">Cloud Technology Implementation</div>
                     <p class="project-tech">Cloud Architecture, Azure, AWS</p>
                     <p class="project-desc">Comprehensive cloud technology solutions with focus on architecture, deployment, and virtualization.</p>
-                    <div class="project-links">
-                        <a href="#" class="project-link">Learn More</a>
-                    </div>
+                    <a href="#" class="project-link">Learn More</a>
                 </div>
 
-                <div class="project-card">
+                <div class="glass-card project-card">
                     <div class="project-header">Cyber Security Analysis</div>
                     <p class="project-tech">Wireshark, Security, Threat Analysis</p>
                     <p class="project-desc">In-depth threat analysis and network security monitoring using industry-standard tools.</p>
-                    <div class="project-links">
-                        <a href="#" class="project-link">Learn More</a>
-                    </div>
+                    <a href="#" class="project-link">Learn More</a>
                 </div>
 
-                <div class="project-card">
+                <div class="glass-card project-card">
                     <div class="project-header">Operational Research</div>
                     <p class="project-tech">Research, Analysis, Optimization</p>
                     <p class="project-desc">Advanced operational research methodologies for problem-solving and optimization.</p>
-                    <div class="project-links">
-                        <a href="#" class="project-link">Learn More</a>
-                    </div>
+                    <a href="#" class="project-link">Learn More</a>
                 </div>
 
-                <div class="project-card">
+                <div class="glass-card project-card">
                     <div class="project-header">System Administration</div>
                     <p class="project-tech">Windows, Linux, Configuration</p>
                     <p class="project-desc">Complete system installation, configuration, and maintenance across multiple platforms.</p>
-                    <div class="project-links">
-                        <a href="#" class="project-link">Learn More</a>
-                    </div>
+                    <a href="#" class="project-link">Learn More</a>
                 </div>
 
-                <div class="project-card">
+                <div class="glass-card project-card">
                     <div class="project-header">Automation Testing Framework</div>
                     <p class="project-tech">Selenium, UIPath, Testing</p>
                     <p class="project-desc">Development of robust automation testing frameworks for quality assurance.</p>
-                    <div class="project-links">
-                        <a href="#" class="project-link">Learn More</a>
-                    </div>
+                    <a href="#" class="project-link">Learn More</a>
                 </div>
 
-                <div class="project-card">
+                <div class="glass-card project-card">
                     <div class="project-header">Technical Support & Solutions</div>
                     <p class="project-tech">Customer Service, Troubleshooting</p>
                     <p class="project-desc">Comprehensive technical support and hardware/software troubleshooting solutions.</p>
-                    <div class="project-links">
-                        <a href="#" class="project-link">Learn More</a>
-                    </div>
+                    <a href="#" class="project-link">Learn More</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Get In Touch</h2>
-            <p class="contact-desc">Open to opportunities, internships, and collaborations. Feel free to reach out!</p>
-            <div class="contact-links">
-                <a href="mailto:mbarath2121@gmail.com" class="contact-link">
-                    <i class="fas fa-envelope"></i> Email
-                </a>
-                <a href="https://github.com/BARATH2121" class="contact-link" target="_blank">
-                    <i class="fab fa-github"></i> GitHub
-                </a>
-                <a href="tel:+919789223360" class="contact-link">
-                    <i class="fas fa-phone"></i> Call
-                </a>
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="glass-card contact-card">
+                <p class="contact-desc">Open to opportunities, internships, and collaborations. Feel free to reach out!</p>
+                <div class="contact-links">
+                    <a href="mailto:mbarath2121@gmail.com" class="contact-link">
+                        <i class="fas fa-envelope"></i> Email
+                    </a>
+                    <a href="https://github.com/BARATH2121" class="contact-link" target="_blank">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
+                    <a href="tel:+919789223360" class="contact-link">
+                        <i class="fas fa-phone"></i> Call
+                    </a>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2025 Barath M. Computer Science Student | Coimbatore, India</p>
     </footer>
