--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home" class="hero">
         <div class="hero-wrapper">
             <div class="profile-card">
-                <img src="hhttps://raw.githubusercontent.com/BARATH2121/portfolio/main/bara.jpg" alt="Barath M" class="profile-image">
+                <img src="h./bara.jpg alt="Barath M" class="profile-image">
                 <h1 class="hero-title">Barath M</h1>
                 <p class="hero-subtitle">Computer Science Student | Cloud Technologies | Software Solutions</p>
             </div>
