Move profile image down with 80px top margin
Adjusted margin-top for profile wrapper.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </nav>
 <section id="home" class="hero">
 <div class="hero-wrapper">
-<div class="profile-wrapper">
+<div class="profile-wrapper" style="margin-top:80px">
 <img src="./bara.jpg" alt="Barath M" class="profile-image">
 </div>
 <h1 class="hero-title">Barath M</h1>
