Add 3 feature project ideas: IoT, NLP, and Real-time Collaboration
Added project cards for Smart IoT Weather Station, AI-Powered Resume Parser, and Real-Time Collaborative Editor with descriptions and tags.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 </div>
 </div>
 </div>
+  <div class="glass-wedge project-card"><h3>Smart IoT Weather Station</h3><p class="tags">IoT, Arduino, Cloud Sync, Real-time Data</p><p>Real-time weather monitoring system with IoT sensors integrated with AWS IoT Core for live cloud data synchronization and predictive analysis dashboard.</p><a href="#" class="project-link">Learn More</a></div>
+  <div class="glass-wedge project-card"><h3>AI-Powered Resume Parser</h3><p class="tags">NLP, Machine Learning, Python, Flask</p><p>Intelligent resume screening tool using NLP to extract key information, match job descriptions, and rank candidates based on relevance and skill compatibility.</p><a href="#" class="project-link">Learn More</a></div>
+  <div class="glass-wedge project-card"><h3>Real-Time Collaborative Editor</h3><p class="tags">WebSockets, Node.js, React, Firebase</p><p>Multi-user document editor with real-time collaboration using WebSockets, supporting live cursor tracking and synchronized content updates across users.</p><a href="#" class="project-link">Learn More</a></div>
 </section>
 <section id="skills" class="skills">
 <div class="container">
