Add width and height attributes to profile image for proper loading
Added width and height attributes to profile image.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <section id="home" class="hero">
 <div class="hero-wrapper">
 <div class="profile-wrapper" style="margin-top:80px">
-<img src="./bara.jpg" alt="Barath M" class="profile-image">
+<img src="./bara.jpg" alt="Barath M" class="profile-ima width="280" height="280"
+  ge">
 </div>
 <h1 class="hero-title">Barath M</h1>
 <p class="hero-subtitle">Computer Science Student | Cloud Technologies | Software Solutions</p>
