Fix profile image by using GitHub raw URL
Replaced local image source with remote URL for profile image.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section id="home" class="hero">
 <div class="hero-wrapper">
 <div class="profile-wrapper" style="margin-top:80px">
-<img src="./bara.jpg" alt="Barath M" class="profile-ima width="280" height="280"
+<img src="./https://raw.githubusercontent.com/BARATH2121/portfolio/main/bara.jpg" alt="Barath M" class="profile-ima width="280" height="280"
   ge">
 </div>
 <h1 class="hero-title">Barath M</h1>
