--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Barath M - Professional Portfolio</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <style>.project-card, .glass-wedge { opacity: 1 !important; }</style>
+  <style>.project-card, .glass-wedge { opacity: 1 !important; } display: flex; flex-direction: column;</style>
 </head>
 <body>
   <canvas id="bg3d"></canvas>
