Fix projects grid width and ensure full display
Fixed a typo in the project description for the Smart Campus Safety & Energy System.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="glass-wedge project-card">
           <h3>Smart Campus Safety & Energy System</h3>
           <p class="tags">IoT, Cognitive AI, Real-time Monitoring, Arduino</p>
-          <p>Integrated cognitive AI system for campus safety with real-time monitoring, emergency response optimization, and smart energy management using IoT sensors.</p>
+          <p>Integrated cognitive AI system for campus safety with real-time monitoring, emergency response optimiz; width: 100%; margin-top: 3rem;ation, and smart energy management using IoT sensors.</p>
           <a href="#" class="project-link">Learn More →</a>
         </div>
         <div class="glass-wedge project-card">
