Add canvas element and script.js integration for hexagon energy background
Added fixed-position canvas element with ID 'bg3d' and gradient background. Included script.js reference to enable the ultimate hexagon energy core animation with fiber-optic ray streams.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </style>
 </head>
 <body>
+  <canvas id="bg3d" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background: linear-gradient(135deg, #001a33 0%, #000d1a 50%, #000000 100%);"></canvas>
   <h1>Barath M</h1>
   <p><strong>Full Stack Developer | Cloud Technologist | IoT Specialist</strong></p>
   <p>Location: Coimbatore, India</p>
@@ -91,6 +92,7 @@
 
   <h2>Status</h2>
   <p>Open to Opportunities</p>
+  <script src="script.js"></script>
 
 </body>
 </html>
