Add GitHub projects showcase section with 6 featured projects and glassmorphism cards

--- a/index.html
+++ b/index.html
@@ -193,6 +193,83 @@
             </div>
         </div>
     </section>
+
+        <!-- GITHUB PROJECTS SHOWCASE SECTION -->
+    <section class="github-projects-section">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-number">05</span>
+                <h2 class="section-title">Open Source & GitHub Projects</h2>
+            </div>
+            <div class="github-projects-grid">
+                <div class="github-project-card">
+                    <h3>Smart Campus Safety IoT System</h3>
+                    <p>AI-powered campus safety system using cognitive computing, Firebase real-time database, AWS IoT services, and Android notifications for threat detection.</p>
+                    <span class="repo-language">Kotlin</span>
+                    <div class="repo-stats">
+                        <span class="repo-stat">⭐ Featured</span>
+                        <span class="repo-stat">💾 4.2KB</span>
+                    </div>
+                    <a href="https://github.com/BARATH2121" class="repo-link">View on GitHub →</a>
+                </div>
+
+                <div class="github-project-card">
+                    <h3>Travel Companion App</h3>
+                    <p>Intelligent travel assistant with Google Maps integration, AI chatbot powered by Gemini, emergency SOS features, and real-time location tracking for safe journeys.</p>
+                    <span class="repo-language">React + Google Maps</span>
+                    <div class="repo-stats">
+                        <span class="repo-stat">⭐ Featured</span>
+                        <span class="repo-stat">💾 8.5KB</span>
+                    </div>
+                    <a href="https://github.com/BARATH2121" class="repo-link">View on GitHub →</a>
+                </div>
+
+                <div class="github-project-card">
+                    <h3>Face Recognition Attendance</h3>
+                    <p>Automated attendance system leveraging AWS Rekognition for facial recognition, DynamoDB for secure data storage, and Python backend processing.</p>
+                    <span class="repo-language">Python + AWS</span>
+                    <div class="repo-stats">
+                        <span class="repo-stat">⭐ Featured</span>
+                        <span class="repo-stat">💾 6.8KB</span>
+                    </div>
+                    <a href="https://github.com/BARATH2121" class="repo-link">View on GitHub →</a>
+                </div>
+
+                <div class="github-project-card">
+                    <h3>Voice Assistant Application</h3>
+                    <p>Advanced voice recognition system with NLP capabilities, real-time command processing, and integration with IoT devices for smart automation.</p>
+                    <span class="repo-language">Python + NLP</span>
+                    <div class="repo-stats">
+                        <span class="repo-stat">📦 Active</span>
+                        <span class="repo-stat">💾 5.3KB</span>
+                    </div>
+                    <a href="https://github.com/BARATH2121" class="repo-link">View on GitHub →</a>
+                </div>
+
+                <div class="github-project-card">
+                    <h3>Expense Tracker</h3>
+                    <p>Cross-platform expense management app built with Flutter, featuring real-time sync with Firebase, offline capability, and comprehensive analytics dashboard.</p>
+                    <span class="repo-language">Flutter + Firebase</span>
+                    <div class="repo-stats">
+                        <span class="repo-stat">📦 Active</span>
+                        <span class="repo-stat">💾 7.2KB</span>
+                    </div>
+                    <a href="https://github.com/BARATH2121" class="repo-link">View on GitHub →</a>
+                </div>
+
+                <div class="github-project-card">
+                    <h3>Medical/Healthcare Application</h3>
+                    <p>Comprehensive healthcare solution (DocRX) with appointment booking, prescription management, telemedicine integration, and patient health records.</p>
+                    <span class="repo-language">Android Studio</span>
+                    <div class="repo-stats">
+                        <span class="repo-stat">📦 Active</span>
+                        <span class="repo-stat">💾 9.1KB</span>
+                    </div>
+                    <a href="https://github.com/BARATH2121" class="repo-link">View on GitHub →</a>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <!-- FOOTER -->
     <footer class="footer">
