Add professional profile picture to hero section with glow effect

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <section class="hero">
         <div class="hero-content">
             <div class="profile-section">
+                                <div class="profile-image-container">
+                    <img src="https://avatars.githubusercontent.com/u/BARATH2121" alt="Barath M" class="profile-image">
+                    <div class="profile-glow"></div>
+                </div>
                 <h1 class="hero-title">Barath M</h1>
                 <p class="subtitle">Full Stack Developer | Cloud Technologist | IoT Specialist</p>
                 <p class="hero-description">Building scalable applications with cutting-edge technologies. Specializing in cloud systems, cognitive computing, and IoT solutions.</p>
