--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barath M - Full Stack Developer</title>
+    <title>Barath M - Hardware Service</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
                     <div class="profile-glow"></div>
                 </div>
                 <h1 class="hero-title">Barath M</h1>
-                <p class="subtitle">Full Stack Developer | Cloud Technologist | IoT Specialist</p>
+                <p class="subtitle">Hardware Service | Cloud Technologist | Tech Support Specialist</p>
                 <p class="hero-description">Building scalable applications with cutting-edge technologies. Specializing in cloud systems, cognitive computing, and IoT solutions.</p>
                 <div class="social-links">
                     <a href="https://github.com/BARATH2121" target="_blank">GitHub</a>
@@ -56,7 +56,7 @@
             </div>
             <div class="content-grid">
                 <div class="about-text">
-                    <p>I'm a passionate full-stack developer and IoT specialist with a strong focus on building fast, clean, and user-friendly applications. Currently pursuing B.Sc Computer Science with specialization in Cognitive Systems.</p>
+                    <p>I'm a passionate full-stack developer and Tech Support Specialist with a strong focus on building fast, clean, and user-friendly applications. Currently pursuing B.Sc Computer Science with specialization in Cognitive Systems.</p>
                     <p>With expertise in Android development, cloud technologies, and machine learning, I love solving complex problems and creating elegant solutions.</p>
                 </div>
                 <div class="about-meta">
