Fix profile image URL - change to local bara.jpg file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-content">
             <div class="profile-section">
                                 <div class="profile-image-container">
-                    <img src="https://avatars.githubusercontent.com/u/BARATH2121" alt="Barath M" class="profile-image">
+                    <img src="bara.jpg" alt="Barath M" class="profile-image">
                     <div class="profile-glow"></div>
                 </div>
                 <h1 class="hero-title">Barath M</h1>
